lab1/Test/L1-A-10-64.output
Error Type A at Line 6
Error Type A at Line 8
Error Type B at Line 24
Error Type A at Line 34
